Fixed some animations and spacing on toolbar, various more fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,7 +37,7 @@
 }
 
 .Alte {
-  font-family: "Alte Haas Grotesk", system-ui, sans-serif;
+  font-family: "Alte Haas Grotesk", Arial, system-ui, sans-serif;
 }
 
 .variableSize {
